# gwpv

./: .buildinfo  .gitignore  LICENSE  README.md  dataformats.html  gallery.html  genindex.html  gui.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.devcontainer/: devcontainer.json
.github/workflows/: Tests.yaml
Examples/Analytics/: Datasources.yaml
Examples/Rainbow/: Datasources.example.yaml  Datasources.yaml  Rainbow.yaml  Scenes.yaml  Still.yaml
containers/: Dockerfile
docs/: conf.py  dataformats.md  gallery.md  gui.md  index.md  installation.md  requirements.txt  usage.md
docs/_static/: style.css
gwpv/: creator.py  download_data.py  generatee.py  progress.py  swsh_cache.py
gwpv/paraview_plugins/: FollowTrajectory.py  SwshGrid.py  TrajectoryDataReader.py  TrajectoryTail.py  WaveformDataReader.py  WaveformToVolume.py
gwpv/plugin_util/: data_array_selection.py  timesteps.py
gwpv/render/: __main__.py  background.py  frames.py  movie.py  parallel.py  waveform.py
gwpv/scene_configuration/: animate.py  camera_motion.py  color.py  defaults.py  load.py  parse_as.py  transfer_functions.py
gwpv/scene_overrides/: ShowTimeAnnotation.yaml
paraview_plugins/: FollowTrajectory.py  SwshGrid.py  TrajectoryDataReader.py  TrajectoryTail.py  WaveformDataReader.py  WaveformToVolume.py
scene_overrides/: ShowOrientationAxis.yaml  ShowTimeAnnotation.yaml
scene_overrides/Background/: Dark.yaml  Light.yaml  Skybox.yaml
scripts/: activate_this.py  gwrender.py
(+11 files in other folders)
