
[metadata]
name = gwpv
version = 0.3.0
description = Visualize gravitational waves with ParaView
author = Nils L. Vu
author_email = nils.vu@aei.mpg.de
url = https://nilsvu.github.io/gwpv
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    astropy
    h5py >= 3.0.0
    importlib_resources; python_version < "3.10"
    numpy
    matplotlib
    pyyaml
    quaternionic
    requests
    rich
    scipy
    spherical

[options.packages.find]
include = gwpv*

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    gwrender = gwpv.render.__main__:main

[flake8]
max-line-length = 80
extend-ignore = E203
